# NG-Scope-SCM-ZMS-NRDZ

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml
cellinspector/source/: main.c
cellscm/: 2025-02-28_11-38-33.txt  celloutput.txt
cellscm/headers/: main.h
cellscm/source/: CMakeLists.txt  main.cc  mib_decode.c
lib/include/srsran/common/: interfaces_common.h
lib/src/phy/: CMakeLists.txt
lib/src/phy/rf/: rf_uhd_imp.cc
ngscope/: cellcfg.txt  rsrp.txt
ngscope/hdr/: BufferPool.h  SFDecoder.h  SIBDecoder.h  ThreadPool.h  args.h  common_type_define.h  main.h  ngscope_radio.h  runtimeConfig.h  sfTask.h  sfworker.h  singleThread.h  ueDatabase.h  ulSch.h
ngscope/hdr/dciLib/: cell_status.h  dci_decoder.h  dci_log.h  dci_ring_buffer.h  dci_sink_client.h  dci_sink_config.h  dci_sink_dci_recv.h  dci_sink_def.h  dci_sink_recv_dci.h  dci_sink_ring_buffer.h  dci_sink_serv.h  dci_sink_sock.h  load_config.h  ngscope_def.h  ngscope_main.h  parse_args.h  phich_decoder.h  radio.h  sib1_helper.h  skip_tti.h  socket.h  status_plot.h  status_tracker.h  sync_dci_remote.h  task_scheduler.h  task_sf_ring_buffer.h  thread_exit.h  time_stamp.h  ue_list.h  ue_tracker.h
ngscope/src/: BufferPool.cc  CMakeLists.txt  SFDecoder.cc  SIBDecoder.cc  ThreadPool.cc  args.cc  main.c  main.cc  mib_search.c  ngscope_main.cc  ngscope_radio.cc  runtimeConfig.cc  sfTask.cc  sfworker.cc  singleThread.cc  ueDatabase.cc  ulSch.cc
ngscope/src/dciLib/: CMakeLists.txt  dci_decoder.c  dci_decoder.cc  decode_sib.cpp  load_config.c  ngscope_main.c  task_scheduler.c  task_scheduler.cc
(+7 files in other folders)
